app-of-apps/manifests/pricelist-networkpolicy/pricelist-allow-http-and-https.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-http-and-https
spec:
  podSelector:
    matchLabels:
      tier: frontend
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 443
