app-of-apps/manifests/pricelist-networkpolicy/pricelist-allow-same-namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pricelist
